--- a/iweather/iweather/Base.lproj/Main.storyboard
+++ b/iweather/iweather/Base.lproj/Main.storyboard
@@ -168,7 +168,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1781.5999999999999" y="36.431784107946029"/>
+            <point key="canvasLocation" x="1722" y="36"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qUN-Wd-fZd">
