--- a/iweather/iweather/MVC/Cell/MyCellLast.xib
+++ b/iweather/iweather/MVC/Cell/MyCellLast.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="87"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="86.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="87"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EAb-Sa-opI">
@@ -59,7 +59,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jwh-zv-9ah">
                         <rect key="frame" x="30" y="15" width="6" height="25.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="F" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPr-np-8u6">
@@ -96,6 +96,12 @@
                     <constraint firstItem="cBf-m9-D59" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="wsW-ne-L4o"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="lblC" destination="B7p-ml-gYE" id="Yp9-1b-bUi"/>
+                <outlet property="lblF" destination="aPr-np-8u6" id="3lN-ru-Fih"/>
+                <outlet property="lblOC" destination="IF5-ui-fOr" id="1Jt-mn-heg"/>
+                <outlet property="lblOF" destination="86f-Wk-7jL" id="4FJ-VH-qpP"/>
+            </connections>
             <point key="canvasLocation" x="26" y="73.5"/>
         </tableViewCell>
     </objects>
