--- a/iweather/iweather/Base.lproj/Main.storyboard
+++ b/iweather/iweather/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="964" y="36.431784107946029"/>
+            <point key="canvasLocation" x="964" y="36"/>
         </scene>
         <!--Home DetailVC-->
         <scene sceneID="bEy-pV-Lfp">
@@ -91,7 +91,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a3b-tM-UbC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="964" y="-682.3088455772114"/>
+            <point key="canvasLocation" x="964" y="-630"/>
         </scene>
         <!--SearchVC-->
         <scene sceneID="z7D-KF-ZoA">
