--- a/iweather/iweather/MVC/Cell/MyCellLast.xib
+++ b/iweather/iweather/MVC/Cell/MyCellLast.xib
@@ -43,7 +43,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="o" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IF5-ui-fOr">
                         <rect key="frame" x="12" y="15" width="5" height="10"/>
                         <fontDescription key="fontDescription" type="system" pointSize="8"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="C" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7p-ml-gYE">
@@ -53,7 +53,7 @@
                             <constraint firstAttribute="height" constant="25" id="zrU-gj-Cp3"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jwh-zv-9ah">
@@ -102,7 +102,7 @@
                 <outlet property="lblOC" destination="IF5-ui-fOr" id="1Jt-mn-heg"/>
                 <outlet property="lblOF" destination="86f-Wk-7jL" id="4FJ-VH-qpP"/>
             </connections>
-            <point key="canvasLocation" x="26" y="73.5"/>
+            <point key="canvasLocation" x="24" y="41"/>
         </tableViewCell>
     </objects>
     <resources>
