--- a/iweather/iweather/MVC/CellDetail/MyCellInfomationLocation.xib
+++ b/iweather/iweather/MVC/CellDetail/MyCellInfomationLocation.xib
@@ -1,19 +1,148 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MyCellInfomationLocation" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="166" id="KGk-i7-Jjw" customClass="MyCellInfomationLocation" customModule="iweather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City :" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQK-JL-Rkl">
+                        <rect key="frame" x="0.0" y="10" width="160" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="tlg-kU-mJu"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="region :" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Eo-wz-xEA">
+                        <rect key="frame" x="0.0" y="70" width="160" height="25"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lat :" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9a-ry-EXX">
+                        <rect key="frame" x="0.0" y="100" width="160" height="25"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="long :" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hTq-f1-X5Y">
+                        <rect key="frame" x="0.0" y="130" width="160" height="25"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FpW-Dm-9JJ">
+                        <rect key="frame" x="165" y="10" width="155" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="akD-8w-qY3"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dw1-67-URd">
+                        <rect key="frame" x="165" y="40" width="155" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="LJa-4T-R33"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hTL-bt-kjO">
+                        <rect key="frame" x="165" y="70" width="155" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="aNl-NM-6d1"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Dh-Th-gvI">
+                        <rect key="frame" x="165" y="100" width="155" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="guq-Bs-i3y"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AhU-o0-uQz">
+                        <rect key="frame" x="165" y="130" width="155" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="wKM-Ga-j7E"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="country :" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nMi-hg-6pT">
+                        <rect key="frame" x="0.0" y="40" width="160" height="25"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <color key="backgroundColor" red="0.53889065979999995" green="0.37561985850000001" blue="0.44788157940000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="dw1-67-URd" secondAttribute="trailing" id="14v-CG-jjm"/>
+                    <constraint firstAttribute="trailing" secondItem="hTL-bt-kjO" secondAttribute="trailing" id="1KY-fb-uSn"/>
+                    <constraint firstAttribute="trailing" secondItem="FpW-Dm-9JJ" secondAttribute="trailing" id="3s8-Qk-RAN"/>
+                    <constraint firstItem="iQK-JL-Rkl" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="1/2" id="8iq-Ow-HSq"/>
+                    <constraint firstItem="3Eo-wz-xEA" firstAttribute="height" secondItem="nMi-hg-6pT" secondAttribute="height" id="9R4-3B-Zbm"/>
+                    <constraint firstItem="hTq-f1-X5Y" firstAttribute="height" secondItem="h9a-ry-EXX" secondAttribute="height" id="C79-mi-KXm"/>
+                    <constraint firstAttribute="trailing" secondItem="7Dh-Th-gvI" secondAttribute="trailing" id="Gsi-KM-C4J"/>
+                    <constraint firstItem="hTq-f1-X5Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="J4v-it-A5t"/>
+                    <constraint firstItem="hTL-bt-kjO" firstAttribute="top" secondItem="dw1-67-URd" secondAttribute="bottom" constant="5" id="Mph-It-cVK"/>
+                    <constraint firstItem="dw1-67-URd" firstAttribute="leading" secondItem="nMi-hg-6pT" secondAttribute="trailing" constant="5" id="Naf-vk-vqB"/>
+                    <constraint firstItem="iQK-JL-Rkl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Ogr-Kp-9k4"/>
+                    <constraint firstItem="iQK-JL-Rkl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ow1-Ov-28j"/>
+                    <constraint firstItem="dw1-67-URd" firstAttribute="top" secondItem="FpW-Dm-9JJ" secondAttribute="bottom" constant="5" id="TPF-cw-VnY"/>
+                    <constraint firstItem="FpW-Dm-9JJ" firstAttribute="leading" secondItem="iQK-JL-Rkl" secondAttribute="trailing" constant="5" id="WlA-lf-Yre"/>
+                    <constraint firstItem="nMi-hg-6pT" firstAttribute="top" secondItem="iQK-JL-Rkl" secondAttribute="bottom" constant="5" id="Wqt-lb-Df7"/>
+                    <constraint firstItem="hTq-f1-X5Y" firstAttribute="top" secondItem="h9a-ry-EXX" secondAttribute="bottom" constant="5" id="Y0D-gJ-dX7"/>
+                    <constraint firstItem="nMi-hg-6pT" firstAttribute="height" secondItem="iQK-JL-Rkl" secondAttribute="height" id="ZZz-UZ-XHB"/>
+                    <constraint firstItem="3Eo-wz-xEA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="b6d-VP-arg"/>
+                    <constraint firstAttribute="trailing" secondItem="AhU-o0-uQz" secondAttribute="trailing" id="bAj-Mq-MsJ"/>
+                    <constraint firstItem="3Eo-wz-xEA" firstAttribute="width" secondItem="nMi-hg-6pT" secondAttribute="width" id="cdJ-js-XIf"/>
+                    <constraint firstItem="AhU-o0-uQz" firstAttribute="top" secondItem="7Dh-Th-gvI" secondAttribute="bottom" constant="5" id="ebF-cU-VM8"/>
+                    <constraint firstItem="FpW-Dm-9JJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="fgD-SA-Pso"/>
+                    <constraint firstItem="h9a-ry-EXX" firstAttribute="top" secondItem="3Eo-wz-xEA" secondAttribute="bottom" constant="5" id="gKI-ZS-lrO"/>
+                    <constraint firstItem="h9a-ry-EXX" firstAttribute="height" secondItem="3Eo-wz-xEA" secondAttribute="height" id="gfF-NI-f2M"/>
+                    <constraint firstItem="h9a-ry-EXX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="lYN-cd-ayK"/>
+                    <constraint firstItem="hTL-bt-kjO" firstAttribute="leading" secondItem="3Eo-wz-xEA" secondAttribute="trailing" constant="5" id="laN-gw-hd7"/>
+                    <constraint firstItem="AhU-o0-uQz" firstAttribute="leading" secondItem="hTq-f1-X5Y" secondAttribute="trailing" constant="5" id="mMd-lJ-7oT"/>
+                    <constraint firstItem="7Dh-Th-gvI" firstAttribute="leading" secondItem="h9a-ry-EXX" secondAttribute="trailing" constant="5" id="meY-hy-QoR"/>
+                    <constraint firstItem="nMi-hg-6pT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="nKs-DC-e62"/>
+                    <constraint firstItem="3Eo-wz-xEA" firstAttribute="top" secondItem="nMi-hg-6pT" secondAttribute="bottom" constant="5" id="qQ1-YU-rHb"/>
+                    <constraint firstItem="nMi-hg-6pT" firstAttribute="width" secondItem="iQK-JL-Rkl" secondAttribute="width" id="ro8-Xz-HFJ"/>
+                    <constraint firstItem="hTq-f1-X5Y" firstAttribute="width" secondItem="h9a-ry-EXX" secondAttribute="width" id="vip-zk-hUL"/>
+                    <constraint firstItem="h9a-ry-EXX" firstAttribute="width" secondItem="3Eo-wz-xEA" secondAttribute="width" id="wRa-Ad-B5t"/>
+                    <constraint firstItem="7Dh-Th-gvI" firstAttribute="top" secondItem="hTL-bt-kjO" secondAttribute="bottom" constant="5" id="xkc-zX-gAr"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="lblCity" destination="FpW-Dm-9JJ" id="CZ1-WW-vyy"/>
+                <outlet property="lblCountry" destination="dw1-67-URd" id="asY-Qf-2uX"/>
+                <outlet property="lblLat" destination="7Dh-Th-gvI" id="vsg-rv-FTb"/>
+                <outlet property="lblLong" destination="AhU-o0-uQz" id="yzk-SF-g0f"/>
+                <outlet property="lblRegion" destination="hTL-bt-kjO" id="Fl8-rX-YMT"/>
+            </connections>
+            <point key="canvasLocation" x="25" y="113"/>
         </tableViewCell>
     </objects>
 </document>
