--- a/iweather/iweather/MVC/CellDetail/MyCellTemp10Day.xib
+++ b/iweather/iweather/MVC/CellDetail/MyCellTemp10Day.xib
@@ -1,19 +1,77 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MyCellTemp10Day" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="42" id="KGk-i7-Jjw" customClass="MyCellTemp10Day" customModule="iweather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SZx-kI-qSb">
+                        <rect key="frame" x="30" y="5" width="28" height="31.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dgx-jp-wWl">
+                        <rect key="frame" x="148" y="8.5" width="25" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="Y5v-Wx-sQl"/>
+                            <constraint firstAttribute="width" constant="25" id="gwV-se-iXJ"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="low" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qw-EP-Mxe">
+                        <rect key="frame" x="255" y="8.5" width="35" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="Z1y-ej-nh8"/>
+                            <constraint firstAttribute="height" constant="25" id="kKK-C0-urU"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="high" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6VE-nD-VBr">
+                        <rect key="frame" x="200" y="8.5" width="35" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="h2T-v9-2gR"/>
+                            <constraint firstAttribute="width" constant="35" id="rxu-tO-njg"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <color key="backgroundColor" red="0.53889065980911255" green="0.37561985850334167" blue="0.44788157939910889" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <constraints>
+                    <constraint firstItem="1qw-EP-Mxe" firstAttribute="leading" secondItem="6VE-nD-VBr" secondAttribute="trailing" constant="20" id="3Af-FT-2iZ"/>
+                    <constraint firstItem="SZx-kI-qSb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="7nL-QW-hj9"/>
+                    <constraint firstItem="6VE-nD-VBr" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Bew-XL-smS"/>
+                    <constraint firstItem="SZx-kI-qSb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Kzr-Im-yyw"/>
+                    <constraint firstItem="Dgx-jp-wWl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="LiK-vO-BSL"/>
+                    <constraint firstItem="Dgx-jp-wWl" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Toj-bf-77p"/>
+                    <constraint firstAttribute="bottom" secondItem="SZx-kI-qSb" secondAttribute="bottom" constant="5" id="spB-WC-Kdb"/>
+                    <constraint firstAttribute="trailing" secondItem="1qw-EP-Mxe" secondAttribute="trailing" constant="30" id="vnp-Aa-FWQ"/>
+                    <constraint firstItem="1qw-EP-Mxe" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xZl-3f-Xb6"/>
+                    <constraint firstItem="SZx-kI-qSb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="xn0-IY-j9m"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="img" destination="Dgx-jp-wWl" id="Ik6-Xx-Bmt"/>
+                <outlet property="lblDay" destination="SZx-kI-qSb" id="AZv-EF-MBP"/>
+                <outlet property="lblHight" destination="6VE-nD-VBr" id="2EX-QW-Fds"/>
+                <outlet property="lblLow" destination="1qw-EP-Mxe" id="jc7-qv-8Zy"/>
+            </connections>
+            <point key="canvasLocation" x="12" y="30"/>
         </tableViewCell>
     </objects>
 </document>
