--- a/iweather/iweather/MVC/CellHome/MyCellWeather.xib
+++ b/iweather/iweather/MVC/CellHome/MyCellWeather.xib
@@ -5,67 +5,96 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCellWeather" rowHeight="79" id="KGk-i7-Jjw" customClass="MyCellWeather" customModule="iweather" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCellWeather" rowHeight="86" id="KGk-i7-Jjw" customClass="MyCellWeather" customModule="iweather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="421" height="86"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                <rect key="frame" x="0.0" y="0.0" width="421" height="86"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12c-a1-BDI">
-                        <rect key="frame" x="10" y="26" width="240" height="52.5"/>
+                        <rect key="frame" x="5" y="41.5" width="52.5" height="33.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kfw-vj-8Dm">
-                        <rect key="frame" x="10.5" y="0.0" width="240" height="26"/>
+                        <rect key="frame" x="69" y="5" width="33" height="20.5"/>
+                        <color key="backgroundColor" red="0.88873751300000003" green="0.074391752429999999" blue="0.094870127959999995" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7E-g0-A0I">
-                        <rect key="frame" x="250" y="0.0" width="58" height="78.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="50"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="o" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Qv-yc-I2o">
-                        <rect key="frame" x="308" y="10" width="9" height="18"/>
+                        <rect key="frame" x="407" y="15" width="9" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMU-XC-JVB">
+                        <rect key="frame" x="5" y="5" width="59" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7E-g0-A0I">
+                        <rect key="frame" x="347" y="0.0" width="60" height="85.5"/>
+                        <color key="backgroundColor" red="0.88873751300000003" green="0.074391752429999999" blue="0.094870127959999995" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="eQt-YN-X2x"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="50"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a0d-OS-OFM">
+                        <rect key="frame" x="312" y="5" width="35" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="cf1-Fn-dqM"/>
+                            <constraint firstAttribute="height" constant="35" id="lmM-up-UTv"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yHu-1a-a4Q">
+                        <rect key="frame" x="0.0" y="80" width="421" height="5"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="5" id="NRu-Ex-vVI"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <color key="backgroundColor" red="0.12076002700000001" green="1" blue="0.11501029309999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="12c-a1-BDI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="0w0-Eq-S0g"/>
-                    <constraint firstItem="v7E-g0-A0I" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Erz-Xh-isT"/>
-                    <constraint firstItem="12c-a1-BDI" firstAttribute="centerX" secondItem="kfw-vj-8Dm" secondAttribute="centerX" id="F8W-dl-4kr"/>
-                    <constraint firstItem="12c-a1-BDI" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="2/3" id="GQB-uN-J97"/>
-                    <constraint firstItem="12c-a1-BDI" firstAttribute="top" secondItem="kfw-vj-8Dm" secondAttribute="bottom" id="GvN-ng-pXM"/>
-                    <constraint firstItem="12c-a1-BDI" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="3/4" id="LIT-PC-vVv"/>
-                    <constraint firstItem="kfw-vj-8Dm" firstAttribute="width" secondItem="12c-a1-BDI" secondAttribute="width" id="Q8Y-JK-o8K"/>
-                    <constraint firstAttribute="bottom" secondItem="12c-a1-BDI" secondAttribute="bottom" id="QHy-v4-QTg"/>
-                    <constraint firstItem="kfw-vj-8Dm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="ji4-38-R7b"/>
-                    <constraint firstAttribute="bottom" secondItem="v7E-g0-A0I" secondAttribute="bottom" id="oIk-R4-bam"/>
-                    <constraint firstItem="kfw-vj-8Dm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="phB-hM-Ldh"/>
-                    <constraint firstItem="v7E-g0-A0I" firstAttribute="leading" secondItem="12c-a1-BDI" secondAttribute="trailing" id="rV1-oO-SQv"/>
-                    <constraint firstItem="3Qv-yc-I2o" firstAttribute="leading" secondItem="v7E-g0-A0I" secondAttribute="trailing" id="snh-VE-ski"/>
-                    <constraint firstItem="3Qv-yc-I2o" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="trW-lL-cxw"/>
+                    <constraint firstItem="aMU-XC-JVB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="4Ve-fE-Lhj"/>
+                    <constraint firstAttribute="trailing" secondItem="yHu-1a-a4Q" secondAttribute="trailing" id="4tp-kr-xOt"/>
+                    <constraint firstItem="aMU-XC-JVB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="5Y6-bQ-UmK"/>
+                    <constraint firstAttribute="bottom" secondItem="yHu-1a-a4Q" secondAttribute="bottom" id="7eF-3y-mxi"/>
+                    <constraint firstItem="12c-a1-BDI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="BEq-9M-s7L"/>
+                    <constraint firstItem="yHu-1a-a4Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="G4T-P0-DxD"/>
+                    <constraint firstAttribute="trailing" secondItem="3Qv-yc-I2o" secondAttribute="trailing" constant="5" id="MBI-YC-Cl4"/>
+                    <constraint firstAttribute="bottom" secondItem="v7E-g0-A0I" secondAttribute="bottom" id="RLS-ck-UiR"/>
+                    <constraint firstItem="a0d-OS-OFM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="XeC-dH-YLC"/>
+                    <constraint firstItem="3Qv-yc-I2o" firstAttribute="leading" secondItem="v7E-g0-A0I" secondAttribute="trailing" id="XtI-ix-5KF"/>
+                    <constraint firstItem="kfw-vj-8Dm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="cpq-JQ-1h1"/>
+                    <constraint firstItem="yHu-1a-a4Q" firstAttribute="top" secondItem="12c-a1-BDI" secondAttribute="bottom" constant="5" id="i8E-VA-guy"/>
+                    <constraint firstItem="v7E-g0-A0I" firstAttribute="leading" secondItem="a0d-OS-OFM" secondAttribute="trailing" id="ipr-mt-PME"/>
+                    <constraint firstItem="v7E-g0-A0I" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="orZ-WC-ukY"/>
+                    <constraint firstItem="3Qv-yc-I2o" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="p8h-cq-UnK"/>
+                    <constraint firstItem="kfw-vj-8Dm" firstAttribute="leading" secondItem="aMU-XC-JVB" secondAttribute="trailing" constant="5" id="tYw-x4-3aA"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="imgCell" destination="a0d-OS-OFM" id="jmh-ff-0Jw"/>
                 <outlet property="lblCity" destination="12c-a1-BDI" id="gzq-wH-Z1v"/>
+                <outlet property="lblCountry" destination="aMU-XC-JVB" id="9bU-uB-Vx1"/>
                 <outlet property="lblTemperature" destination="v7E-g0-A0I" id="kla-hT-PJz"/>
                 <outlet property="lblTime" destination="kfw-vj-8Dm" id="2oj-Zx-L88"/>
             </connections>
-            <point key="canvasLocation" x="25" y="69.5"/>
+            <point key="canvasLocation" x="-263.5" y="20"/>
         </tableViewCell>
     </objects>
 </document>
